# Cypher

./: .dockerignore  .gitignore  COMMANDS.md  Cargo.toml  DEPLOY.md  Dockerfile  Justfile  LICENSE  ONION_ROUTING_PLAN.md  README.md  ROADMAP.md  deny.toml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  flake.nix
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml  setup.yml
clients/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
clients/desktop/src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/src/: lib.rs  main.rs
clients/desktop/src-tauri/src/commands/: chat.rs  connect.rs  identity.rs  link.rs  mod.rs  qr.rs  settings.rs  transfer.rs
clients/desktop/src/api/: tauri.js  tauri.ts
clients/desktop/src/components/: ChatPane.jsx  ChatPane.tsx  FileDropZone.jsx  FileDropZone.tsx  HomeView.jsx  HomeView.tsx  Icons.tsx  IdentityView.tsx  SettingsView.jsx  SettingsView.tsx  Sidebar.jsx  Sidebar.tsx  Spinner.jsx  StatusBar.tsx  ToastContainer.tsx
clients/desktop/src/i18n/: en.ts  index.ts  ru.ts
clients/desktop/src/stores/: anonymity.ts  chat.js  chat.ts  connection.js  connection.ts  toasts.ts  transfers.ts
clients/desktop/src/utils/: notifications.ts
clients/pwa/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
clients/pwa/public/: manifest.json  sw.js
clients/pwa/scripts/: generate-icons.js
clients/pwa/src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx
clients/pwa/src/api/: index.js  index.ts  proto.js  proto.ts
clients/pwa/src/components/: BottomNav.jsx  BottomNav.tsx  ChatPane.jsx  ChatPane.tsx  FileDropZone.jsx  FileDropZone.tsx  FilesView.jsx  FilesView.tsx  HomeView.jsx  HomeView.tsx  Icons.jsx  Icons.tsx  IdentityView.tsx  InstallPrompt.jsx  InstallPrompt.tsx  SettingsView.jsx  SettingsView.tsx  Sidebar.tsx  Spinner.tsx  StatusBar.jsx  ToastContainer.jsx  ToastContainer.tsx
clients/pwa/src/i18n/: en.ts  ru.ts
clients/pwa/src/storage/: crypto.ts  identity.ts  messages.ts
clients/pwa/src/stores/: anonymity.ts  chat.js  chat.ts  connection.js  connection.ts  toasts.js  transfers.js  transfers.ts
clients/pwa/src/utils/: notifications.ts
crates/cypher-client-core/: Cargo.toml
crates/cypher-client-core/src/: api.rs  connection.rs  crypto.rs  identity_store.rs  lib.rs  p2p.rs  session.rs  signaling.rs  storage.rs  transfer.rs
crates/cypher-client-core/src/api/: files.rs  messaging.rs  network.rs  runtime.rs
crates/cypher-client-core/src/onion/: bootstrap.rs  circuit.rs  config.rs  cover.rs  decoder.rs  encoder.rs  fetcher.rs  indicator.rs  jitter.rs  mod.rs  padding.rs  pool.rs  relay_client.rs  service.rs  shadow.rs  tor.rs
crates/cypher-client-core/src/persistence/: encryption.rs  mod.rs  sqlite.rs
crates/cypher-common/: Cargo.toml
crates/cypher-common/src/: config.rs  error.rs  lib.rs  metrics.rs  ratelimit.rs  types.rs
crates/cypher-crypto/: Cargo.toml
crates/cypher-crypto/fuzz/: Cargo.toml
crates/cypher-crypto/fuzz/fuzz_targets/: fuzz_aead.rs  fuzz_ratchet.rs
crates/cypher-crypto/src/: aead.rs  identity.rs  lib.rs  ratchet.rs  x3dh.rs
crates/cypher-nat/: Cargo.toml
crates/cypher-nat/fuzz/: Cargo.toml
crates/cypher-nat/fuzz/fuzz_targets/: fuzz_stun.rs
crates/cypher-nat/src/: candidate.rs  dtls.rs  hole_punch.rs  ice.rs  lib.rs  relay_client.rs  stun.rs
crates/cypher-proto/: Cargo.toml  build.rs
crates/cypher-proto/fuzz/: Cargo.toml
crates/cypher-proto/fuzz/fuzz_targets/: fuzz_decode_bytes.rs  fuzz_dispatch.rs
crates/cypher-proto/src/: lib.rs
crates/cypher-tls/: Cargo.toml
crates/cypher-tls/src/: cert.rs  config.rs  lib.rs
crates/cypher-transfer/: Cargo.toml
crates/cypher-transfer/src/: assembler.rs  chunker.rs  compress.rs  lib.rs  progress.rs  receiver.rs  sender.rs
crates/cypher-transport/: Cargo.toml
crates/cypher-transport/src/: codec.rs  frame.rs  lib.rs  server.rs  session.rs
crates/cypher-transport/tests/: integration.rs
deploy/: Caddyfile  alloy.alloy  loki.yml  prometheus.yml  promtail.yml
deploy/grafana/dashboards/: cypher-logs.json  cypher-overview.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/grafana/provisioning/datasources/: datasources.yml
proto/schema/: core.p2p
services/gateway/: Cargo.toml
services/gateway/src/: main.rs
services/relay/: Cargo.toml
services/relay/src/: identity.rs  main.rs  onion.rs
services/signaling/: Cargo.toml
services/signaling/src/: bootstrap.rs  delivery.rs  inbox.rs  key_store.rs  main.rs  peer.rs  signing.rs  stun.rs
services/signaling/tests/: compose_regression.rs
tools/load-test/: Cargo.toml
tools/load-test/src/: main.rs
