[package]
name = "cypher-client-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
tor = ["dep:arti-client", "dep:tor-rtcompat"]

[dependencies]
cypher-common.workspace = true
cypher-proto.workspace = true
cypher-crypto.workspace = true
cypher-tls = { workspace = true, features = ["insecure-tls"] }
cypher-transport.workspace = true
cypher-nat.workspace = true
cypher-transfer.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
dashmap.workspace = true
x25519-dalek.workspace = true
serde_json.workspace = true
rand.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
rusqlite.workspace = true
zstd.workspace = true
zeroize.workspace = true
serde.workspace = true
hkdf.workspace = true
sha2.workspace = true
postcard.workspace = true
ed25519-dalek.workspace = true
arti-client = { workspace = true, optional = true, features = ["bridge-client", "pt-client"] }
tor-rtcompat = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
