[package]
name = "signaling"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cypher-common.workspace = true
cypher-proto.workspace = true
cypher-transport.workspace = true
tokio.workspace = true
bytes.workspace = true
dashmap.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
redis.workspace = true
async-nats.workspace = true
rand.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
prometheus.workspace = true
ed25519-dalek.workspace = true
hmac.workspace = true
sha2.workspace = true

[dev-dependencies]
cypher-nat.workspace = true
cypher-tls = { workspace = true, features = ["insecure-tls"] }
tempfile = "3"
