[package]
name = "load-test"
version = "0.1.0"
edition = "2021"

[dependencies]
cypher-common.workspace = true
cypher-proto.workspace = true
cypher-tls.workspace = true
cypher-transport.workspace = true
tokio.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
